src/nuclio/functions/functions.less
ncl-functions {
  igz-info-page-actions-bar {
    .igz-info-page-actions-bar {
      min-width: 910px;

      igz-default-dropdown {
        display: inline-block;
        width: 150px;
      }
    }
  }

  .igz-info-page-content-wrapper {
    .igz-info-page-content {
      min-width: 1380px;

      .table-actions {
        display: flex;
        align-items: center;
        margin: 5px 10px;
      }

      .function-status {
        min-width: 100px;
      }
    }
  }
}

